# LogoScraper-Pro

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  startup.sh  tsconfig.app.json  vercel.json  vite.config.ts
api/: health.ts  scrape.ts
src/: App.tsx  AppRoutes.tsx  index.css  main.tsx
src/data/automotive/: brands.json
src/data/beauty/: brands.json
src/data/electronics/: brands.json
src/data/fashion/: brands.json
src/data/finance/: brands.json
src/data/food/: brands.json
src/data/media/: brands.json
src/data/retail/: brands.json
src/data/software/: asia.json  automotive.json  backend.json  beauty.json  cloud.json  communication.json  database.json  design.json  development.json  devops.json  electronics.json  energy.json  fashion.json  finance.json  food.json  frontend.json  game.json  health.json  index.ts  media.json  office.json  os.json  retail.json  security.json  sports.json  telecom.json  travel.json
src/data/sports/: brands.json  (+1 more)
src/hooks/: useScraper.ts
src/lib/: logo-cache.ts  supabase-client.ts  svg-minify.ts  svg-to-png.ts  utils.ts  wasm.ts
src/pages/: ApiPage.tsx
src/sections/: ApiDocs.tsx  CodeRain.tsx  LogoResults.tsx  LogoSearchHero.tsx  TerminalPanel.tsx
src/types/: imagetracerjs.d.ts  scraper.ts
src/wasm/: logo_scraper.d.ts  logo_scraper.js  logo_scraper_bg.wasm  logo_scraper_bg.wasm.d.ts  package.json
tools/logo-scraper/: Cargo.toml
tools/logo-scraper/src/: lib.rs  models.rs  processor.rs  scraper.rs  wasm.rs
tools/s3-audit/: README.md  audit_s3.py  requirements.txt
